tdf#124997: only skip ScColumn*-related part when calculating widths

Otherwise, not-yet-allocated columns have STD_COL_WIDTH (1280), while
normal columns have widths like 82 (pixel), making the oversized grid
look as if the columns not having vertical lines at all.

Regression after commit 7282014e362a1529a36c88eb308df8ed359c2cfa

Change-Id: Ibb37c0c621d009bda2c5c0176cf5d3b238c45964